--- a/bio.html
+++ b/bio.html
@@ -9,8 +9,8 @@
 			<h1 id="name">Carolyn Saund</h1>
 		</div>
 		<div class="left">
-			<p><a href="">Resume</a></p>
-			<p><a href="">Home</a></p>
+			<p><a href="resume.html">Resume</a></p>
+			<p><a href="index.html">Home</a></p>
 		</div>
 		<div class="right">
 			<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
