--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 			<p><a href="index.html">Home</a></p>
 		</div>
 		<div class="right">
-			<img id="headshot" src ="C:\Users\Carolyn\Downloads\132192_10151080120485924_549921036_o.jpg" />
+			<img id="headshot" src ="headshot.jpg" />
 			<h3 class="heading">Biography</h3>
 				<p class="info">As you can see, this is a lovely photo of me</p>
 				<p class="info">Carolyn was born and raised in San Carlos, California. She grew up with her older brother, Bradley, and mother and father, <br>
