--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 			<p><a href="index.html">Home</a></p>
 		</div>
 		<div class="right">
-			<img id="headshot" src ="headshot.jpg" />
+			<img id="headshot" src ="headshot.jpg" alt="Carolyn"/>
 			<h3 class="heading">Biography</h3>
 				<p class="info">As you can see, this is a lovely photo of me</p>
 				<p class="info">Carolyn was born and raised in San Carlos, California. She grew up with her older brother, Bradley, and mother and father, <br>
@@ -27,7 +27,8 @@
 					<li>Camping</li>
 					<li>Mountineering</li>
 					<li>Ice Climbing</li>
-					</ul></p>
+					</ul>
+					</p>
 					<p class="info">She dedicates much of her free time to the Leaders' Council of her sorority, Alpha Omicron Pi, where she plays a large role in <br>
 					the academic development of the chapter. She takes her passion for the advancement of women in STEM fields with her to local schools, <br>
 					where she teaches robotics to young girls and is in the process of developing a Computer Science badge for the Girl Scouts Association <br>
