--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="biostyle.css"/>
+		<link type="text/css" rel="stylesheet" media="only screen and (min-device-width:720px)" href="biostyle.css"/>
+		<link rel="stylesheet" type="text/css" media="only screen and (man-device-width:719px)" href="biostyle-small.css"/>
 		<title>bio</title>
 	</head>
 	<body>
